--- a/PonzianiComponents/Scoresheet.razor
+++ b/PonzianiComponents/Scoresheet.razor
@@ -44,10 +44,12 @@
 									<CascadingValue Value="@Id" Name="Id">
 										<CascadingValue Value="@Comments" Name="Comments">
 											<CascadingValue Value="@Variations" Name="Variations">
+												<CascadingValue Value="@Language" Name="Language">
 												<CascadingValue Value="@Type">
 												 <CascadingValue Value="@HierarchicalDisplay" Name="HierarchicalDisplay">
 													<CascadingValue Value="@OnMoveSelected">
 														<MoveText Game="vgame" MoveNumber="moveNumber" Side="Side.WHITE" Level="1"></MoveText>
+													</CascadingValue>
 													</CascadingValue>
 												</CascadingValue>
 												</CascadingValue>
@@ -113,12 +115,14 @@
 									<CascadingValue Value="@Id" Name="Id">
 										<CascadingValue Value="@Comments" Name="Comments">
 											<CascadingValue Value="@Variations" Name="Variations">
+												<CascadingValue Value="@Language" Name="Language">
 												<CascadingValue Value="@Type">
 													<CascadingValue Value="@HierarchicalDisplay" Name="HierarchicalDisplay">
 													<CascadingValue Value="@OnMoveSelected">
 														<MoveText Game="vgame" MoveNumber="moveNumber" Side="Side.BLACK" Level="1"></MoveText>
 													</CascadingValue>
 													</CascadingValue>
+												</CascadingValue>
 												</CascadingValue>
 											</CascadingValue>
 										</CascadingValue>
@@ -148,12 +152,14 @@ else if (Mode == DisplayMode.INLINE)
 		<CascadingValue Value="@Id" Name="Id">
 			<CascadingValue Value="@Comments" Name="Comments">
 				<CascadingValue Value="@Variations" Name="Variations">
+					<CascadingValue Value="@Language" Name="Language">
 					<CascadingValue Value="@Type">
 						<CascadingValue Value="@HierarchicalDisplay" Name="HierarchicalDisplay">
 						<CascadingValue Value="@OnMoveSelected">
 							<MoveText Game="Game"></MoveText>
 						</CascadingValue>
 						</CascadingValue>
+					</CascadingValue>
 					</CascadingValue>
 				</CascadingValue>
 			</CascadingValue>
