--- a/PonzianiDemo/Pages/ScoresheetDemo.razor
+++ b/PonzianiDemo/Pages/ScoresheetDemo.razor
@@ -1,28 +1,35 @@
 ﻿@page "/scoresheet"
-<h3>ScoresheetDemo</h3>
-
-@if (game.Moves.Count > 0) {
-<Scoresheet Game="@game" OnMoveSelected="@OnMoveSelected" Mode="@DisplayMode" Type="@model.NotationType" OtherAttributes="@OtherAttributes" Comments="@model.Comments" 
-			Variations ="@model.Variations" HierarchicalDisplay="@model.HierarchicalDisplay" ColorCommentText="@model.ColorCommentText"
-			ColorCommentBackground="@model.ColorCommentBackground" ColorVariationBackground="@model.ColorVariationBackground"/>
-}
+@using System.Globalization
+<h3>Scoresheet Demo</h3>
 
 <EditForm Model="@model" OnValidSubmit="@HandleValidSubmit">
-	<div class="form-group">
-		<label for="inpType">Select Sample PGN</label>
-		<InputSelect Name="pgnkey" @bind-Value="model.PGNKey" id="inpPgnKey">
+	<div class="form-group row">
+		<label class="col-sm-3 col-form-label" for="inpType">Select Sample PGN</label>
+		<div class="input-group col-sm-9">
+		<InputSelect class="form-control" Name="pgnkey" @bind-Value="model.PGNKey" id="inpPgnKey">
 			@foreach (var t in SampleData.PGNSamples.Keys)
 			{
 	   <option Name="pgnkey" Value="@t">@t</option>
 			}
-  </InputSelect>
-  	<button type="submit">Load</button>
- </div>
-	<div class="form-group">
-		 <label>Or Upload PGN (only first game will be loaded)</label>
-		<InputFile OnChange="@LoadFile" />
+		</InputSelect>
+		<div class="input-group-append">
+  		<button type="submit">Load</button>
+		</div>
+		</div>
+	</div>
+	<div class="row form-group">
+	<label class="col-sm-3 col-form-label">Or Upload PGN (only first game will be loaded)</label>
+	<div class="input-group col-sm-9">
+		<InputFile class="form-control-file" OnChange="@LoadFile" />
+	</div>
 	</div>
 	@if (game.Moves.Count > 0) {
+		<div class="form-group">
+		<Scoresheet Game="@game" OnMoveSelected="@OnMoveSelected" Mode="@DisplayMode" Type="@model.NotationType" OtherAttributes="@OtherAttributes" Comments="@model.Comments" 
+			Variations ="@model.Variations" HierarchicalDisplay="@model.HierarchicalDisplay" ColorCommentText="@model.ColorCommentText"
+			ColorCommentBackground="@model.ColorCommentBackground" ColorVariationBackground="@model.ColorVariationBackground" Language="@model.Language"/>
+		</div>
+	<div class="form-group">
 	<div class="form-check">
 		<InputCheckbox class="form-check-input" @bind-Value="model.InlineMode" />
 		<label>
@@ -47,50 +54,71 @@
 			Hierarchical Display:
 		</label>
 	</div>
-	<div class="form-group">
-		<label for="inpType">Select Type</label>
-		<InputSelect Name="type" @bind-Value="model.NotationType" id="inpType">
+	</div>
+	<div class="row form-group">
+		<label class="col-sm-3 col-form-label" for="inpType">Select Type</label>
+		<div class="input-group col-sm-9">
+		<InputSelect class="form-control" Name="type" @bind-Value="model.NotationType" id="inpType">
 			@foreach (var t in Enum.GetNames(typeof(Scoresheet.NotationType)))
 			{
 	   <option Name="type" Value="@t">@t</option>
 			}
   </InputSelect>
+  </div>
  </div>
+ 	<div class="row form-group">
+		<label class="col-sm-3 col-form-label" for="inpLang">Language</label>
+		<div class="input-group col-sm-9">
+		<InputSelect class="form-control"  Name="langu" @bind-Value="model.Language" id="inpLang">
+			@foreach (var t in Chess.SupportedLanguages)
+			{
+	   <option Name="langu" Value="@t">@($"{t} ({CultureInfo.GetCultureInfo(t).ThreeLetterISOLanguageName})")</option>
+			}
+		</InputSelect>
+		</div>
+	</div>
 	@if (model.Comments && (model.InlineMode || model.Variations))
 	{
-		<div class="form-group">
-		<label>
+		<div class="row form-group">
+		<label class="col-sm-3 col-form-label">
 			Color Comment Text (in inline mode or within Variations):
 		</label>
-		<input type="color" @bind-value="model.ColorCommentText"/>
+		<div class="input-group col-sm-9">
+		<input class="form-control" type="color" @bind-value="model.ColorCommentText"/>
+	</div>
 	</div>
 	}
  	@if (model.Comments && (!model.InlineMode))
 	{
-	<div class="form-group">
-		<label>
+	<div class="row form-group">
+		<label class="col-sm-3 col-form-label">
 			Color Comment Background:
 		</label>
-		<input type="color" @bind-value="model.ColorCommentBackground"/>
+		<div class="input-group col-sm-9">
+		<input class="form-control" type="color" @bind-value="model.ColorCommentBackground"/>
+	</div>
 	</div>
 	}
 	@if (model.Variations && (!model.InlineMode || model.HierarchicalDisplay))
 	{
-	<div class="form-group">
-		<label>
+	<div class="row form-group">
+		<label class="col-sm-3 col-form-label">
 			Color Variation Background:
 		</label>
-		<input type="color" @bind-value="model.ColorVariationBackground"/>
+		<div class="input-group col-sm-9">
+		<input class="form-control" type="color" @bind-value="model.ColorVariationBackground"/>
+	</div>
 	</div>
 	}
 }
- <div class="form-group">
-  <label>
+ <div class="row form-group">
+  <label class="col-sm-3 col-form-label">
    Other Attributes:
   </label>
+  <div class="input-group col-sm-9">
   <InputText class="form-control" @bind-Value="model.OtherAttributes" />
+  </div>
  </div>
- }
 </EditForm>
 
 <div class="alert alert-success" role="alert">
