Eco code extended and sped up Demo app: Eco browser

--- a/PonzianiComponents/MoveText.razor
+++ b/PonzianiComponents/MoveText.razor
@@ -180,7 +180,7 @@
 
 	private async Task SelectMoveAsync(EventArgs eventArgs, int moveNumber, Side side)
 	{
-		MoveSelectInfo msi = new(Id, Game.GetPosition(moveNumber, side), Game.GetMove(moveNumber, side));
+		MoveSelectInfo msi = new(Id, Game.GetPosition(moveNumber, side), Game.GetMove(moveNumber, side), Game);
 		await OnMoveSelected.InvokeAsync(msi);
 	}
 }
