--- a/PonzianiDemo/Pages/Index.razor
+++ b/PonzianiDemo/Pages/Index.razor
@@ -10,8 +10,8 @@
 			 SetupMode="@SetupMode"
 			 Fen="@model.Fen"
 			 HighlightLastAppliedMove="@model.HighlightLastMove"
-			 OnMovePlayed=@OnMovePlayed
-			 OnSetupChanged="@OnSetupChanged"
+			 OnMovePlayed=OnMovePlayed
+			 OnSetupChanged="OnSetupChanged"
 			 ColorDarkSquares="@model.ColorDarkSquares"
 			 ColorLightSquares="@model.ColorLightSquares"
 			 ColorHighlight="@model.HighlightColor"
