--- a/PonzianiDemo/Shared/NavMenu.razor
+++ b/PonzianiDemo/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
 				<span class="oi oi-plus" aria-hidden="true"></span> Multiple Boards
 			</NavLink>
 		</li>
+				<li class="nav-item px-3">
+			<NavLink class="nav-link" href="ecobrowser">
+				<span class="oi oi-plus" aria-hidden="true"></span> ECO Browser
+			</NavLink>
+		</li>
 		<!-- <li class="nav-item px-3">
 			<NavLink class="nav-link" href="fetchdata">
 				<span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
