--- a/PonzianiDemo/Shared/NavMenu.razor
+++ b/PonzianiDemo/Shared/NavMenu.razor
@@ -27,16 +27,16 @@
 				<span class="oi oi-plus" aria-hidden="true"></span> Multiple Boards
 			</NavLink>
 		</li>
-				<li class="nav-item px-3">
+		<li class="nav-item px-3">
 			<NavLink class="nav-link" href="ecobrowser">
 				<span class="oi oi-plus" aria-hidden="true"></span> ECO Browser
 			</NavLink>
 		</li>
-		<!-- <li class="nav-item px-3">
-			<NavLink class="nav-link" href="fetchdata">
-				<span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+		<li class="nav-item px-3">
+			<NavLink class="nav-link" href="puzzles">
+				<span class="oi oi-plus" aria-hidden="true"></span> Puzzles
 			</NavLink>
-		</li> -->
+		</li>
 	</ul>
 </div>
 
