--- a/PonzianiComponents/Scoresheet.razor
+++ b/PonzianiComponents/Scoresheet.razor
@@ -6,10 +6,9 @@
 	<table class="pzNotTable" id="@Id" @attributes=OtherAttributes>
 	 <thead class="pzNotTableHead">
 	 </thead>
+	 	<tbody @ref="_tbody" class="pzNotTableBody" style="@($"overflow-y:scroll; display:block;{Height()}")">
 		@if (Game.Moves.Count > 0)
 		{
-		 <tbody @ref="_tbody" class="pzNotTableBody" style="@($"overflow-y:scroll; display:block;{Height()}")">
-
 				@if (g.Position.SideToMove == Side.BLACK)
 				{
 					int moveNumber = g.Position.MoveNumber;
@@ -39,6 +38,7 @@
 								Game vg = (Game)g.Clone();
 								vg.Add(Game.Moves[i]);
 								List<Game> vgames = vg.VariationGames();
+								int index = 0;
 								foreach (var vgame in vgames)
 								{
 									<CascadingValue Value="@Id" Name="Id">
@@ -48,6 +48,10 @@
 												<CascadingValue Value="@Type">
 												 <CascadingValue Value="@HierarchicalDisplay" Name="HierarchicalDisplay">
 													<CascadingValue Value="@OnMoveSelected">
+														@if (index > 0)
+														{
+															<text>&#32;</text>
+														}
 														<MoveText Game="vgame" MoveNumber="moveNumber" Side="Side.WHITE" Level="1"></MoveText>
 													</CascadingValue>
 													</CascadingValue>
@@ -56,6 +60,7 @@
 											</CascadingValue>
 										</CascadingValue>
 									</CascadingValue>
+									++index;
 								}
 							}
 							</td></tr>
@@ -110,6 +115,7 @@
 							<tr class="pzVariation"><td colspan="3">
 							@{
 								List<Game> vgames = g.VariationGames();
+								int index = 0;
 								foreach (var vgame in vgames)
 								{
 									<CascadingValue Value="@Id" Name="Id">
@@ -119,6 +125,10 @@
 												<CascadingValue Value="@Type">
 													<CascadingValue Value="@HierarchicalDisplay" Name="HierarchicalDisplay">
 													<CascadingValue Value="@OnMoveSelected">
+														@if (index > 0)
+														{
+															<text>&#32;</text>
+														}
 														<MoveText Game="vgame" MoveNumber="moveNumber" Side="Side.BLACK" Level="1"></MoveText>
 													</CascadingValue>
 													</CascadingValue>
@@ -140,9 +150,28 @@
 				@if (g.SideToMove == Side.WHITE)
 				{
 			  <tr> <td class="pzNotColMovenumber">@g.Position.MoveNumber</td><td class="pzNotColWhite pzNotResult">@PGN.ResultToString(Game.Result)</td><td class="pzNotColBlack"></td></tr>
-				}
-		 </tbody>
+				}	 
 		}
+		@{
+			int startAddNumber = Game.Position.MoveNumber + (int)Game.Position.SideToMove;
+			int renderedRows = (Game.Moves.Count + 1) / 2;
+			if (Game.Moves.Count > 0 && Game.Position.SideToMove == Side.WHITE)
+			{
+				++renderedRows;
+				++startAddNumber;
+			}
+			int additionalRows = MinimalRowCount - renderedRows;
+					 
+			for(int i = 0; i<additionalRows; ++i)
+			{
+				<tr> 
+					<td class="pzNotColMovenumber">@(startAddNumber + i)</td>
+					<td class="pzNotColWhite"></td>
+					<td class="pzNotColBlack"></td>		
+				</tr>
+			}
+		}
+		</tbody>
 	</table>
 }
 else if (Mode == DisplayMode.INLINE)
