Engine Evaluation Bar

--- a/PonzianiComponents/Engine.razor
+++ b/PonzianiComponents/Engine.razor
@@ -16,6 +16,8 @@
     </div>
 </div>
 
+<EvaluationGauge Score=@Score ScoreText=@ScoreText(0)/>
+
 @if (ShowLog)
 {
     <div style="width: 100%; height: 400px; overflow-y: auto">
