--- a/PonzianiComponentsDemo/Client/Pages/EngineDemo.razor
+++ b/PonzianiComponentsDemo/Client/Pages/EngineDemo.razor
@@ -26,7 +26,7 @@
 	</div>
 </EditForm>
 
-<Engine ShowLog="Model.ShowLog" @ref="engine" NumberOfLines="Model.NumberOfLines"></Engine>
+<Engine ShowLog="Model.ShowLog" @ref="engine" NumberOfLines="Model.NumberOfLines" style="border: 1px solid green;"></Engine>
 
 @code {
 
