Add other Attributes to EngineLog and EvaluationGauge

--- a/PonzianiComponents/EvaluationGauge.razor
+++ b/PonzianiComponents/EvaluationGauge.razor
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div @attributes=OtherAttributes>
     <div class="pzEvaluationGaugeScore">@ScoreText</div>
     <div class="pzEvaluationGauge">
         <div class="pzEvaluationBar" style="width:@Width;"></div>
