--- a/PonzianiComponents/EngineLog.razor
+++ b/PonzianiComponents/EngineLog.razor
@@ -1,6 +1,6 @@
 ﻿@inject IJSRuntime js
 
-<div style="width: 100%; height: 400px; overflow-y: auto">
+<div class="pzEngineLog"  @attributes=OtherAttributes>
     <pre style="white-space: pre-wrap;">
             @LogText
     </pre>
