--- a/PonzianiComponents/EvaluationGauge.razor
+++ b/PonzianiComponents/EvaluationGauge.razor
@@ -1,11 +1,23 @@
 ﻿<div @attributes=OtherAttributes>
-    <div class="pzEvaluationGaugeScore">@ScoreText</div>
-    <div class="pzEvaluationGauge">
-        <div class="pzEvaluationBar" style="width:@Width;"></div>
-    </div>
-    <div class="pzTickbar">
-        @TickBarSVG();
-    </div>
+    @if (Orientation == Orientation.Horizontal)
+    {
+        <div class="pzEvaluationGaugeScore">@ScoreText</div>
+        <div class="pzEvaluationGauge">
+            <div class="pzEvaluationBar" style="width:@Width;"></div>
+        </div>
+        <div class="pzTickbar">
+            @TickBarSVG();
+        </div>
+    } else
+    {
+        <div class="pzVTickbar">@TickBarSVGV();</div>
+        <div class="pzVEvaluationGauge">
+            <div class="pzVEvaluationBar" style="height:@Height;"></div>
+        </div>
+        <div class="pzVEvaluationGaugeScore">
+        	@ScoreText
+        </div>
+    }
 </div>
 
 @code {
