--- a/PonzianiComponents/EvaluationGauge.razor.css
+++ b/PonzianiComponents/EvaluationGauge.razor.css
@@ -9,7 +9,7 @@
     background-color: black;
 }
 
-.pzEvaluationGauge .pzEvaluationBar {
+.pzEvaluationBar {
     height: 100%;
     background-color: white;
 }
@@ -27,5 +27,42 @@
     width: 100%;
     max-width: 500px;
     height: 20px;
+    vertical-align: middle;
 }
 
+.pzVTickbar {
+    float: left;
+    margin: 5px auto;
+    margin-right: 0px;
+    width: 30px;
+    max-height: 500px;
+    height: 100%;
+}
+
+.pzVEvaluationGauge {
+    float: left;
+    margin: 5px auto;
+    height: 100%;
+    max-height: 500px;
+    border: 1px solid black;
+    width: 30px;
+    background-color: white;
+}
+
+.pzVEvaluationBar {
+    height: 100%;
+    background-color: black;
+}
+
+.pzVEvaluationGaugeScore {
+    float: left;
+    margin-left: 5px;
+    text-align: center;
+    font-weight: bold;
+    background-color: white;
+    vertical-align: middle;
+    height: 100%;
+    display: flex;
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
+}
